force-app/main/default/objects/TxnLineItem__c/TxnLineItem__c.object-meta.xml
<CustomObject>
    <description>Details individual products or services within a transaction, synced from the SAP system for line-level tracking.</description>
    <label>Transaction Line Item</label>
    <nameField>
        <displayFormat>TLI-{000000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>