force-app/main/default/objects/TxnLineItem__c/fields/AccountNumber__c.field-meta.xml
<CustomField>
    <fullName>AccountNumber__c</fullName>
    <description>Displays the Account number of the Transaction this Line Item belongs to.</description>
    <formula>transactionId__r.accountId__r.AccountNumber</formula>
    <label>Account Number</label>
    <type>Text</type>
</CustomField>