force-app/main/default/objects/TxnLineItem__c/fields/price__c.field-meta.xml
<CustomField>
    <fullName>price__c</fullName>
    <description>Displays the price of the line item.</description>
    <inlineHelpText>Price of the line item.</inlineHelpText>
    <label>List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>