force-app/main/default/objects/TxnLineItem__c/fields/product__c.field-meta.xml
<CustomField>
    <fullName>product__c</fullName>
    <description>Displays the product name of the line item.</description>
    <inlineHelpText>Product name of the line item.</inlineHelpText>
    <label>Product Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>