force-app/main/default/objects/TxnLineItem__c/fields/quantity__c.field-meta.xml
<CustomField>
    <fullName>quantity__c</fullName>
    <description>Displays the quantity of the line item.</description>
    <inlineHelpText>Quantity of the line item.</inlineHelpText>
    <label>Quantity</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>