force-app/main/default/objects/TxnLineItem__c/fields/transactionId__c.field-meta.xml
<CustomField>
    <fullName>transactionId__c</fullName>
    <description>Links each Transaction Line Item to its parent Transaction for detailed record tracking.</description>
    <inlineHelpText>Corresponding Transaction.</inlineHelpText>
    <label>Transaction</label>
    <referenceTo>Transaction__c</referenceTo>
    <relationshipLabel>Line Items</relationshipLabel>
    <relationshipName>LineItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>